feature(get-managers):users can get all managers [Finishes #168267722]
