# src/routes/api/user.router.js
@@ -5,9 +5,10 @@ import UserMiddleware from '../../middlewares/user.middleware';
 import roleValidation from '../../validation/user/role.validation';
 
 const { isSuperAdmin } = UserMiddleware;
-const { setUserRole } = UserController;
+const { setUserRole, getManagers } = UserController;
 const router = express.Router();
 
 router.patch('/role', verifyToken, isSuperAdmin, roleValidation, setUserRole);
+router.get('/managers', verifyToken, getManagers);
 
 export default router;
